Created Clients module and component to add a client with form validation

--- a/angular-frontend/portfolio-manager/src/app/app.component.html
+++ b/angular-frontend/portfolio-manager/src/app/app.component.html
@@ -12,6 +12,9 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="" [routerLink]="['/clients']">Clients</a>
+      </li>      
+      <li class="nav-item">
         <a class="nav-link" href="" [routerLink]="['/securities']">Securities</a>
       </li>
       <li class="nav-item">
