--- a/angular-frontend/portfolio-manager/src/app/modules/clients/create-client/create-client.component.html
+++ b/angular-frontend/portfolio-manager/src/app/modules/clients/create-client/create-client.component.html
@@ -76,9 +76,9 @@
                   class="form-control"
                   placeholder="State"                   
                   required 
-                  [(ngModel)]="client.state"
+                  [(ngModel)]="client.stateCode"
                   #stateField="ngModel">                  
-                    <option *ngFor="let state of states" value="state.stateCode">{{state.stateName}}</option>
+                    <option *ngFor="let state of states" [value]="state.stateCode">{{state.stateName}}</option>
             </select>
           </div>
           <div [hidden]="stateField.valid || stateField.untouched" class="text-danger">
@@ -122,16 +122,32 @@
               class="form-control" 
               placeholder="Email" 
               required
-              [(ngModel)]="client.email"
+              pattern="^\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$"
+              maxlength="60"
+              [(ngModel)]="client.emailAddress"
               #emailField="ngModel"/>
       </div>
       <div [hidden]="emailField.valid || emailField.untouched" class="text-danger">
             A valid email address must be entered
      </div>
+     <div class="form-group">
+        <label for="dateOfBirth" class="col-sm-4 col-form-label font-weight-bold">Date of Birth</label>
+        <div clas="col-sm-8">
+            <input id="dateOfBirth" name="dateOfBirth" type="text" 
+                class="form-control" 
+                placeholder="Date of birth" 
+                required
+                [(ngModel)]="client.dateOfBirth"
+                #dateOfBirthField="ngModel"/>
+        </div>
+        <div [hidden]="dateOfBirthField.valid || dateOfBirthField.untouched" class="text-danger">
+              Date of birth must be provided
+       </div>
+       </div>
   </div>
 
   
-      <button class="btn btn-primary">Create</button>
+      <button class="btn btn-primary" (click)="onSubmit(createClientForm)">Create</button>
   
       <br/>
 
