--- a/angular-frontend/portfolio-manager/src/app/modules/clients/create-client/create-client.component.html
+++ b/angular-frontend/portfolio-manager/src/app/modules/clients/create-client/create-client.component.html
@@ -1,108 +1,112 @@
 
 <div class="row justify-content-center">
 
-  <div class="col-sm-6">
+  <div class="col-sm-8">
   
   
   
   <h2>Create New Client</h2>
   <form #createClientForm="ngForm">
   
-      <div class="form-group">
-          <label for="firstName" class="col-sm-4 col-form-label font-weight-bold">First Name</label>
-          <div clas="col-sm-8">
-              <input id="firstName" name="firstName" type="text" 
-                  class="form-control" 
-                  placeholder="First Name" 
-                  required pattern="^[\w ]{2,30}$" 
-                  [(ngModel)]="client.firstName" 
-                  #firstNameField="ngModel" />
-          </div>
-          <div [hidden]="firstNameField.valid || firstNameField.untouched" class="text-danger">
-              First name is required and must only contain letters and spaces
-          </div>
+    <div class="form-group row">
+        <label for="firstName" class="col-sm-4 col-form-label font-weight-bold">First Name</label>
+        <div class="col-sm-8">
+            <input id="firstName" name="firstName" type="text" 
+              class="form-control" 
+              placeholder="First Name" 
+              required pattern="^[\w ]{2,30}$" 
+              [(ngModel)]="client.firstName" 
+              #firstNameField="ngModel" />
+            
+            <span [hidden]="firstNameField.valid || firstNameField.untouched" class="text-danger">
+                First name is required and must only contain letters and spaces
+            </span>
+        </div>
       </div>
 
-      <div class="form-group">
-          <label for="lastName" class="col-sm-4 col-form-label font-weight-bold">Last Name</label>
-          <div clas="col-sm-8">
-              <input id="lastName" name="lastName" type="text" 
-                  class="form-control" 
-                  placeholder="Last Name" 
-                  required 
-                  pattrn="^[\w ]{2,30}$" 
-                  [(ngModel)]="client.lastName"
-                  #lastNameField="ngModel" />
-          </div>
-          <div [hidden]="lastNameField.valid || lastNameField.untouched" class="text-danger">
+      <div class="form-group row">
+        <label for="lastName" class="col-sm-4 col-form-label font-weight-bold">Last Name</label>
+        <div class="col-sm-8">
+            <input id="lastName" name="lastName" type="text" 
+              class="form-control" 
+              placeholder="Last Name" 
+              required 
+              pattern="^[\w ]{2,30}$" 
+              [(ngModel)]="client.lastName"
+              #lastNameField="ngModel" />            
+            <span [hidden]="lastNameField.valid || lastNameField.untouched" class="text-danger">
                 Last name is required and must only contain letters and spaces
-            </div>
+            </span>
+        </div>
       </div>
 
-      <div class="form-group">
-          <label for="streetAddress" class="col-sm-4 col-form-label font-weight-bold">Street Address</label>
-          <div clas="col-sm-8">
-              <input id="streetAddress" name="streetAddress" type="text" 
+      <div class="form-group row">
+        <label for="streetAddress" class="col-sm-4 col-form-label font-weight-bold">Street Address</label>
+        <div class="col-sm-8">
+            <input id="streetAddress" name="streetAddress" type="text" 
                   class="form-control" 
                   placeholder="Street Address" 
                   required 
                   [(ngModel)]="client.streetAddress"
-                  #streetAddressField="ngModel" />
-          </div>
-          <div [hidden]="streetAddressField.valid || streetAddressField.untouched" class="text-danger">
+                  #streetAddressField="ngModel" />            
+            <span [hidden]="streetAddressField.valid || streetAddressField.untouched" class="text-danger">
                 Street address is required and must contain only numbers, letters, spaces and the # or dash (-) signs
-          </div>
+            </span>
+        </div>
       </div>
 
-      <div class="form-group">
+      <div class="form-group row">
         <label for="city" class="col-sm-4 col-form-label font-weight-bold">City</label>
-        <div clas="col-sm-8">
+        <div class="col-sm-8">
             <input id="city" name="city" type="text" 
                 class="form-control form-control.is-valid" 
                 placeholder="City" 
                 required 
                 pattern="^[\w]{2,30}$" 
                 [(ngModel)]="client.city"
-                #cityField="ngModel"/>
-        </div>
-        <div [hidden]="cityField.valid || cityField.untouched" class="text-danger">
+                #cityField="ngModel"/>           
+            <span [hidden]="cityField.valid || cityField.untouched" class="text-danger">
                 City names must contain only letters and spaces
-         </div>
-    </div>
-      <div class="form-group">
-          <label for="state" class="col-sm-4 col-form-label font-weight-bold">State</label>
-          <div clas="col-sm-8">
-              <select id="state" name="state" 
+            </span>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="state" class="col-sm-4 col-form-label font-weight-bold">State</label>
+        <div class="col-sm-8">
+            <select id="state" name="state" 
                   class="form-control"
                   placeholder="State"                   
                   required 
                   [(ngModel)]="client.stateCode"
                   #stateField="ngModel">                  
                     <option *ngFor="let state of states" [value]="state.stateCode">{{state.stateName}}</option>
-            </select>
-          </div>
-          <div [hidden]="stateField.valid || stateField.untouched" class="text-danger">
+            </select>           
+            <span [hidden]="stateField.valid || stateField.untouched" class="text-danger">
                 A state must be selected
-         </div>          
+            </span>
+        </div>
       </div>
-      <div class="form-group">
-          <label for="zipCode" class="col-sm-4 col-form-label font-weight-bold">Zip Code</label>
-          <div clas="col-sm-8">
-              <input id="zipCode" name="zipCode" type="text" 
+
+      <div class="form-group row">
+        <label for="zipCode" class="col-sm-4 col-form-label font-weight-bold">Zip Code</label>
+        <div class="col-sm-8">
+            <input id="zipCode" name="zipCode" type="text" 
                   class="form-control" 
                   placeholder="Zip Code" 
                   required 
                   pattern="^[\d]{5}$" 
                   [(ngModel)]="client.zipCode"
                   #zipCodeField="ngModel"/>
-          </div>
-          <div [hidden]="zipCodeField.valid || zipCodeField.untouched" class="text-danger">
+            <span [hidden]="zipCodeField.valid || zipCodeField.untouched" class="text-danger">
                 A five digit zip code must be entered
-         </div>
+            </span>
+        </div>
       </div>
-      <div class="form-group">
+
+      <div class="form-group row">
         <label for="phone" class="col-sm-4 col-form-label font-weight-bold">Phone</label>
-        <div clas="col-sm-8">
+        <div class="col-sm-8">
             <input id="phone" name="phone" type="tel" 
                 class="form-control" 
                 placeholder="Phone Number" 
@@ -110,48 +114,60 @@
                 pattern="^[\d]{3}-[\d]{3}-[\d]{4}$" 
                 [(ngModel)]="client.phone"
                 #phoneField="ngModel"/>
-        </div>
-        <div [hidden]="phoneField.valid || phoneField.untouched" class="text-danger">
+            <span [hidden]="phoneField.valid || phoneField.untouched" class="text-danger">
                 A phone number must be entered in the format of XXX-YYY-ZZZZ
-         </div>
-    </div>
-    <div class="form-group">
-      <label for="email" class="col-sm-4 col-form-label font-weight-bold">Email</label>
-      <div clas="col-sm-8">
-          <input id="email" name="email" type="email" 
-              class="form-control" 
-              placeholder="Email" 
-              required
-              pattern="^\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$"
-              maxlength="60"
-              [(ngModel)]="client.emailAddress"
-              #emailField="ngModel"/>
-      </div>
-      <div [hidden]="emailField.valid || emailField.untouched" class="text-danger">
-            A valid email address must be entered
-     </div>
-     <div class="form-group">
-        <label for="dateOfBirth" class="col-sm-4 col-form-label font-weight-bold">Date of Birth</label>
-        <div clas="col-sm-8">
-            <input id="dateOfBirth" name="dateOfBirth" type="text" 
-                class="form-control" 
-                placeholder="Date of birth" 
-                required
-                [(ngModel)]="client.dateOfBirth"
-                #dateOfBirthField="ngModel"/>
+            </span>
         </div>
-        <div [hidden]="dateOfBirthField.valid || dateOfBirthField.untouched" class="text-danger">
-              Date of birth must be provided
-       </div>
-       </div>
-  </div>
+      </div>
 
-  
-      <button class="btn btn-primary" (click)="onSubmit(createClientForm)">Create</button>
-  
-      <br/>
+      <div class="form-group row">
+        <label for="Email" class="col-sm-4 col-form-label font-weight-bold">Email</label>
+        <div class="col-sm-8">
+            <input id="email" name="email" type="email" 
+                class="form-control" 
+                placeholder="Email" 
+                required
+                pattern="^\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$"
+                maxlength="60"
+                [(ngModel)]="client.emailAddress"
+                #emailField="ngModel"/>
+            <span [hidden]="emailField.valid || emailField.untouched" class="text-danger">
+                A valid email address must be entered
+            </span>
+        </div>
+      </div>
 
-      {{ client | json }}
+      <div class="form-group row">
+        <label for="dateOfBirth" class="col-sm-4 col-form-label font-weight-bold">Date of Birth</label>
+        <div class="col-sm-8">
+            <div clas="col-sm-8">
+                <input id="dateOfBirth" name="dateOfBirth" type="text" 
+                    bsDatepicker
+                    placement="right"
+                    [minDate]="minDate"
+                    [maxDate]="maxDate"
+                    class="form-control" 
+                    placeholder="MM/DD/YYYY" 
+                    required
+                    [(ngModel)]="client.dateOfBirth"
+                    #dateOfBirthField="ngModel"/>
+            </div>
+            <span [hidden]="dateOfBirthField.valid || dateOfBirthField.untouched" class="text-danger">
+                Date of birth must be provided
+            </span>
+        </div>
+      </div>
+
+     
+  
+
+      <div class="form-group row justify-content-end">
+        <button class="btn btn-primary" (click)="onSubmit(createClientForm)" >Create</button>
+        <button class="btn btn-secondary" type="reset" style="margin-left: 10px">Reset</button>
+      </div>
+
+
+      <!-- {{ client | json }} -->
   </form>
   
   </div>
